--- a/cart.html
+++ b/cart.html
@@ -60,55 +60,66 @@
                             </ul>
                         </div>
                         <ul class="cart-item-list">
-                            <li>
+                            <li v-for="item in productList">
                                 <div class="cart-tab-1">
                                     <div class="cart-item-check">
-                                        <a href="javascript:void 0" class="item-check-btn">
+                                        <a href="javascript:void 0" class="item-check-btn" :class="{'check':item.checked}" @click="checkChoose(item)">
                                             <svg class="icon icon-ok">
                                                 <use xlink:href="#icon-ok"></use>
                                             </svg>
                                         </a>
                                     </div>
                                     <div class="cart-item-pic">
-                                        <img src="img/goods-1.jpg" alt="烟">
+                                        <img :src="item.productImage" alt="烟">
                                     </div>
                                     <div class="cart-item-title">
-                                        <div class="item-name">黄鹤楼香烟</div>
+                                        <div class="item-name">{{item.productName}}</div>
                                     </div>
                                     <div class="item-include">
                                         <dl>
                                             <dt>赠送:</dt>
-                                            <dd>打火机</dd>
+                                            <dd v-for="one in item.parts">{{one.partsName}}</dd>
                                         </dl>
                                     </div>
                                 </div>
+
+
+
                                 <div class="cart-tab-2">
-                                    <div class="item-price"></div>
+                                    <div class="item-price">{{item.productPrice | filterMoney(item)}}</div>
                                 </div>
+
+
                                 <div class="cart-tab-3">
                                     <div class="item-quantity">
                                         <div class="select-self select-self-open">
                                             <div class="quantity">
-                                                <a href="javascript:void 0">+</a>
-                                                <input type="text" value="0" disabled>
-                                                <a href="javascript:void 0">-</a>
+                                                <a href="javascript:void 0" @click="changeNum(item,-1)">-</a>
+                                                <input type="text" value="0" disabled v-model="item.productQuantity">
+                                                <a href="javascript:void 0" @click="changeNum(item,1)">+</a>
                                             </div>
                                         </div>
                                         <div class="item-stock">有货</div>
                                     </div>
                                 </div>
+
+
                                 <div class="cart-tab-4">
-                                    <div class="item-price-total">0.00</div>
+                                    <div class="item-price-total">{{item.productPrice * item.productQuantity | filterMoney(item)}}</div>
                                 </div>
+
+
                                 <div class="cart-tab-5">
                                     <div class="cart-item-operation">
-                                        <a href="javascript:void 0" class="item-edit-btn">
+                                        <a href="javascript:void 0" class="item-edit-btn" @click="del(item)">
                                             <svg class="icon icon-del">
                                                 <use xlink:href="#icon-del"></use>
                                             </svg>
                                         </a>
                                     </div>
                                 </div>
+
+
                             </li>
                         </ul>
                     </div>
@@ -118,47 +129,49 @@
                 <div class="cart-foot-wrap">
                     <div class="cart-foot-l">
                         <div class="item-all-check">
-                            <a href="javascript:void 0">
-                    <span class="item-check-btn">
-                      <svg class="icon icon-ok"><use xlink:href="#icon-ok"></use></svg>
-                    </span>
+                            <a href="javascript:void 0"  @click="checkAll(true)">
+                             <span class="item-check-btn" :class="{'check':checkFlag}">
+                                <svg class="icon icon-ok"><use xlink:href="#icon-ok"></use></svg>
+
+                             </span>
                                 <span>全选</span>
                             </a>
                         </div>
                         <div class="item-all-del">
-                            <a href="javascript:void 0" class="item-del-btn">
+                            <a href="javascript:void 0" class="item-del-btn" @click="checkAll(false)">
                                 <span>取消全选</span>
                             </a>
                         </div>
                     </div>
                     <div class="cart-foot-r">
                         <div class="item-total">
-                            Item total: <span class="total-price"></span>
+                            Item total: <span class="total-price">{{totalMoney |filterMoney(totalMoney) }}</span>
                         </div>
                         <div class="next-btn-wrap">
-                            <a href="javascrit:;" class="btn btn--red" style="width: 200px">结账</a>
+                            <a href="address.html" class="btn btn--red" style="width: 200px">结账</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="md-modal modal-msg md-modal-transition" id="showModal">
+        <div class="md-modal modal-msg md-modal-transition " id="showModal" :class="{ 'md-show' :cardShow }" >
             <div class="md-modal-inner">
                 <div class="md-top">
-                    <button class="md-close">关闭</button>
+                    <button class="md-close" @click="miss()">关闭</button>
                 </div>
                 <div class="md-content">
                     <div class="confirm-tips">
                         <p id="cusLanInfo">你确认删除此订单信息吗?</p>
                     </div>
                     <div class="btn-wrap col-2">
-                        <button class="btn btn--m" id="btnModalConfirm">Yes</button>
-                        <button class="btn btn--m btn--red" id="btnModalCancel">No</button>
+                        <button class="btn btn--m" id="btnModalConfirm" @click="delTrue()">Yes</button>
+                        <button class="btn btn--m btn--red" id="btnModalCancel" @click="miss()">No</button>
                     </div>
                 </div>
             </div>
         </div>
+        <div :class="{ 'md-overlay' :cardShow}" ></div>
     </div>
 </div>
 
